attempt to obtain numeric constraint values for GETPIVOTDATA(), tdf#35247

This helps for a very basic
GETPIVOTDATA(A1,A1,"fieldname",DATE(1999,12,23))
to recognize the date value, but still fails for not so simple
expressions or if there are more than one constraints, as we don't
transport type information in tokens yet.

Change-Id: I3dba8959b580e823af2b1352adb147ca9e4b9285